Update standalone helper programs
Update standalone helper programs.